--- a/code.ipynb
+++ b/code.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Telia kodutöö\n",
     "## Telekommunikatsiooni ettevõttest lahkuvate klientide ennustamine"
    ]
   },
@@ -17,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,9 +26,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.metrics import accuracy_score, roc_auc_score, confusion_matrix, classification_report\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import precision_score, recall_score, f1_score, roc_auc_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
@@ -38,7 +36,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import GradientBoostingClassifier, AdaBoostClassifier, VotingClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier, AdaBoostClassifier\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.neural_network import MLPClassifier"
    ]
